@@ -1,5 +1,7 @@
 *SVN*
 
+* Time #in_current_time_zone and #change_time_zone_to_current return self when Time.zone is nil [Geoff Buesing]
+
 * Remove unneeded #to_datetime_default_s alias for DateTime#to_s, given that we inherit a #to_default_s from Date that does exactly the same thing [Geoff Buesing]
 
 * Refactor Time and DateTime #to_formatted_s: use ternary instead of nested if/else [Geoff Buesing]
